History
=======

SilvaForum 1.0 (unreleased)
---------------------------

Ported from 0.4:

- Refactor all the views, and use silva.core.views now.

- Add functional tests.


SilvaForum 0.3.2 (2009-02-09)
-----------------------------

- Fix link in view_comment

SilvaForum 0.3.1 (2008-11-18)
-----------------------------

- Fix documentation format to ReST.

SilvaForum 0.3
--------------

- Re-wrote dtformat.py

- Added i18n support

- Removed SilvaTestCase.py.

SilvaForum 0.2-beta1
--------------------

- Added condition on forum table to not display when empty.

- Adjusted presentation code so the forum works with Silva Layout.

- Refactored pagination code so defines are grouped.

SilvaForum 0.1-beta-2
---------------------

- Changed regex in format_link to not include parenthesis, or periods.

- Removed the priority (was -4) in light of the
  ``doc/priority_settings.txt`` recommendations.

- The Include Comments code source includes icons for comments, these
  could be added to the forum view.

- Changes to make near-complete customization of the Include Comments
  code source possible with css.

- Move all the include checking in view_topic.pt into one define.

- Add id and topic_url to the comment object for constructing more
  sensible permalinks, going to the topic with an anchor that's the
  comment id.

- Add permalink to "[user] posted"; this links to the comment in the
  topic with an anchor, not to the comment object (which is not very
  useful because there's no context).

- Add a parameter field to the SMI to add a topic, which by default is
  the document title.

- Put in javascript toggle button for a comment form.

- Checked in Marc Petitmermet's code source to the
  SilvaForum-CodeSource branch and added it to Silva Forum code. Added
  a view_include.pt, and include.css to handle the styles of a Silva
  Document with comments. Added to the FiveViewable class a switch to
  check for an 'include' parameter that gets the code source template.
